Stores and fetches images from server. Closes #97