@@ -1,6 +1,7 @@
 package pt.ulisboa.tecnico.cmov.g16.foodist.adapters;
 
 import android.content.Context;
+import android.graphics.Bitmap;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
@@ -10,8 +11,10 @@ import android.widget.Filterable;
 import android.widget.ImageView;
 import android.widget.TextView;
 
+import java.util.ArrayList;
 import java.util.EnumSet;
 import java.util.LinkedList;
+import java.util.List;
 
 import pt.ulisboa.tecnico.cmov.g16.foodist.R;
 import pt.ulisboa.tecnico.cmov.g16.foodist.model.MenuItem;
@@ -20,16 +23,21 @@ import pt.ulisboa.tecnico.cmov.g16.foodist.model.FoodType;
 public class MenuItemAdapter extends ArrayAdapter<MenuItem> implements Filterable {
 
     private Context mContext;
-    private LinkedList<MenuItem> originalList;
-    private LinkedList<MenuItem> filteredList;
+    private List<MenuItem> originalList;
+    private List<MenuItem> filteredList;
 
     private EnumSet<FoodType> dietaryConstraints;
 
-    public MenuItemAdapter(Context mContext, LinkedList<MenuItem> list){
+    public MenuItemAdapter(Context mContext, List<MenuItem> list){
         super(mContext, 0, list);
         this.mContext = mContext;
         this.originalList = list;
         this.filteredList = list;
+    }
+
+    public void setList(List<MenuItem> list) {
+        originalList = list;
+        notifyDataSetChanged();
     }
 
     public void setDietaryConstraints(EnumSet<FoodType> set) {
@@ -51,8 +59,10 @@ public class MenuItemAdapter extends ArrayAdapter<MenuItem> implements Filterabl
 
     public View getView(int position, View convertView, ViewGroup parent) {
         View listItem = convertView;
-        if(listItem == null)
+        if (listItem == null) {
             listItem = LayoutInflater.from(mContext).inflate(R.layout.menu_item, parent, false);
+
+        }
 
         MenuItem item = filteredList.get(position);
 
@@ -62,10 +72,14 @@ public class MenuItemAdapter extends ArrayAdapter<MenuItem> implements Filterabl
         TextView foodType = listItem.findViewById(R.id.foodType);
         foodType.setText(item.getFoodType().resourceId);
         ImageView image = listItem.findViewById(R.id.foodImage);
-        if(item.getImages().size()>0)
-            image.setImageDrawable(item.getImages().getLast().getDrawable());
-        else
+
+        ArrayList<Bitmap> images = item.getImages();
+        if (images.size() > 0) {
+            image.setImageBitmap(images.get(images.size()-1));
+        }
+        else {
             image.setImageResource(android.R.drawable.ic_delete);
+        }
 
         return listItem;
     }
